Fixing borders on li:hover in sidebar so it doesn't jump around quite so much

--- a/web/themes/custom/asulib_barrio/scss/components/sidebar.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/sidebar.scss
@@ -46,13 +46,17 @@
     li {
       padding: 1rem;
       list-style: none;
+      border-top: 1px solid $white;
+    }
+    li:not(:last-child) {
+      border-bottom: 1px solid $white;
     }
     li:hover {
       background-color: $gray-2;
+      border-top: 1px solid $border-color;
     }
     li:not(:last-child):hover {
       border-bottom: 1px solid $border-color;
-
     }
     a:hover,
     a:focus {
